# bunch

apps/web/bunch/: README.md  bun.lockb  package.json
apps/web/bunch/app/: globals.css  layout.tsx  page.tsx
apps/web/bunch/app/api/auth/[...auth]/: route.ts
apps/web/bunch/app/bunch/[bunchId]/: page.tsx
apps/web/bunch/app/bunch/[bunchId]/channel/[channelId]/: page.tsx
apps/web/bunch/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/bunch/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/bunch/components/: MainLayout.tsx  ThemeToggle.tsx
apps/web/bunch/components/bunch/: CreateBunchDialog.tsx
apps/web/bunch/components/channel/: ChannelsList.tsx  CreateChannelDialog.tsx
apps/web/bunch/components/layout/: MainLayout.tsx  Sidebar.tsx
apps/web/bunch/components/message/: MessageComposer.tsx  MessageEditor.tsx  MessageItem.tsx  MessageList.tsx
apps/web/bunch/components/theme/: ThemeToggle.tsx
apps/web/bunch/components/user/: UserNav.tsx
apps/web/bunch/lib/: WebSocketProvider.tsx  api.ts  hooks.ts  types.ts
server/: pyproject.toml  requirements.txt  run_daphne.py
server/bunch/: consumers.py  serializers.py  views.py
server/orchard/: asgi.py  middleware.py  routing.py  settings.py  urls.py
server/users/: serializers.py
